--- a/src/components/QuoteBox/quoteBox.scss
+++ b/src/components/QuoteBox/quoteBox.scss
@@ -1,10 +1,13 @@
 .quote-box {
+  position: relative;
   width: 100%;
+  min-width: 270px;
   max-width: 600px;
   border: 1px solid black;
   padding: 40px;
   text-align: center;
   border-radius: 5px;
+  padding-bottom: 60px;
 
   .text {
     font-size: 2rem;
@@ -14,5 +17,39 @@
     display: flex;
     justify-content: flex-end;
     font-size: 1.2rem;
+  }
+  .new-quote {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    padding: 10px;
+    font-size: 0.9rem;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .icons-container {
+    position: absolute;
+    display: flex;
+    left: 30px;
+    bottom: 30px;
+    width: fit-content;
+  }
+
+  .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: grey;
+    border-radius: 5px;
+    margin: 0 2.5px;
+  }
+  .icon {
+    font-size: 1.4rem;
+    color: white;
   }
 }
