added the dynamic coloring to the quotes

--- a/src/components/QuoteBox/quoteBox.scss
+++ b/src/components/QuoteBox/quoteBox.scss
@@ -3,11 +3,11 @@
   width: 100%;
   min-width: 270px;
   max-width: 600px;
-  border: 1px solid black;
   padding: 40px;
   text-align: center;
   border-radius: 5px;
   padding-bottom: 60px;
+  background-color: white;
 
   .text {
     font-size: 2rem;
